#1946 Fix text wrapping on blockquotes

--- a/clients/android/NewsBlur/app/src/main/assets/reading.css
+++ b/clients/android/NewsBlur/app/src/main/assets/reading.css
@@ -75,5 +75,7 @@ pre, blockquote {
     padding: 0.6em;
     margin: 0.6em;
     word-wrap: break-word !important;
-    white-space: pre-wrap !important;
+    overflow-wrap: break-word !important;
+    white-space: normal !important;
+    text-wrap: pretty;
 }
